--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
   },
   "homepage": "https://github.com/mrsolarius/Boid-threeJs#readme",
   "dependencies": {
-    "three": "^0.160.1"
+    "@types/three": "^0.160.0",
+    "prettier": "^3.2.4",
+    "three": "^0.160.1",
+    "typescript": "^5.3.3"
   },
   "devDependencies": {
     "vite": "^5.0.12"
